fix: web 源根据环境自动切换

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_WEB_BASE_URL=https://7-news-system-web.vercel.app
+WEB_BASE_URL=https://7-news-system-web.vercel.app
 VITE_SERVER_BASE_URL=https://7-news-system-backend.vercel.app
